--- a/NotificationManager/NotificationManager.csproj
+++ b/NotificationManager/NotificationManager.csproj
@@ -7,12 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MasDev.Common.Push.PushSharp" Version="1.0.2" />
     <PackageReference Include="PushSharp.Core" Version="1.0.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\NotificationManager.Contract\NotificationManager.Contract.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\..\API\ProfileManagement\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
